// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware basic 1`] = `
{
  action: findMany,
  args: undefined,
  dataPath: [],
  model: User,
  runInTransaction: false,
}
`;

exports[`middleware basic 2`] = `
{
  action: findMany,
  args: undefined,
  dataPath: [],
  model: Post,
  runInTransaction: false,
}
`;
